player can select their own phrase

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/573953d01d.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Underdog" rel="stylesheet">
     <title>Hangskeleton</title>
   </head>
   <body>
     <div class="container">
         <header>
-          <h1>Hangskeleton<span>&nbsp;&nbsp;&nbsp;&nbsp;Countries edition</span></h1>
+          <h1>Hangskeleton<span>&nbsp;&nbsp;&nbsp;&nbsp;Countries edition&nbsp;&nbsp;<i class="fa fa-globe" aria-hidden="true"></i></span></h1>
           <nav>
             <a href="#" class="instructions">Instructions</a>
             <a href="#" class="categories">Categories</a>
@@ -42,6 +43,14 @@
           <div class="background">
             <div class="notification">
               <p>Choose a category to begin.</p>
+              <br>
+              <br>
+              <p>Want to enter your own word or phrase?<p>
+              <br>
+              <input placeholder="Type your word or phrase" maxlength="30"></input>
+              <button>Click here</button>
+              <br>
+              <p style="font-size:20px">Do not include punctuation</p>
             </div>
             <div id="letter-board">
             </div>
